[gd_scene load_steps=10 format=2]

[ext_resource path="res://Game/Entity/Player/Mannequiny/Mannequiny.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/WindowTitle/WindowTitle.tscn" type="PackedScene" id=2]
[ext_resource path="res://UI/Equipment/EquipContainer/EquipContainer.tscn" type="PackedScene" id=3]
[ext_resource path="res://UI/AttackList/sword-wound.svg" type="Texture" id=4]
[ext_resource path="res://UI/Equipment/EquipSlot/EquipSlot.tscn" type="PackedScene" id=5]
[ext_resource path="res://UI/Equipment/Equipment.gd" type="Script" id=6]
[ext_resource path="res://shared/themes/bestia_theme.tres" type="Theme" id=7]


[sub_resource type="ViewportTexture" id=1]
viewport_path = NodePath("PlayerPortraitView")

[sub_resource type="Environment" id=2]
ambient_light_color = Color( 1, 1, 1, 1 )
ambient_light_energy = 0.2

[node name="Equipment" type="PanelContainer"]
margin_right = 648.0
margin_bottom = 367.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 7 )
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Equipments" type="VBoxContainer" parent="."]
margin_right = 648.0
margin_bottom = 367.0

[node name="Title" parent="Equipments" instance=ExtResource( 2 )]
margin_right = 648.0
title_text = "Equipment"
icon = ExtResource( 4 )

[node name="Rows" type="HBoxContainer" parent="Equipments"]
margin_top = 45.0
margin_right = 648.0
margin_bottom = 296.0

[node name="LeftMargin" type="MarginContainer" parent="Equipments/Rows"]
margin_right = 230.0
margin_bottom = 251.0
mouse_filter = 1
custom_constants/margin_left = 10

[node name="Left" type="VBoxContainer" parent="Equipments/Rows/LeftMargin"]
margin_left = 10.0
margin_right = 230.0
margin_bottom = 251.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="HeadContainerEmpty" parent="Equipments/Rows/LeftMargin/Left" instance=ExtResource( 5 )]
compatible_equip_slot = 0

[node name="HeadContainer" parent="Equipments/Rows/LeftMargin/Left" instance=ExtResource( 3 )]
visible = false
margin_top = 51.0
margin_bottom = 98.0

[node name="ShoulderContainerEmpty" parent="Equipments/Rows/LeftMargin/Left" instance=ExtResource( 5 )]
margin_top = 51.0
margin_bottom = 98.0
slot_name = "Shoulder"

[node name="ArmsContainerEmpty" parent="Equipments/Rows/LeftMargin/Left" instance=ExtResource( 5 )]
margin_top = 102.0
margin_bottom = 149.0
slot_name = "Arms"

[node name="HandsContainerEmpty" parent="Equipments/Rows/LeftMargin/Left" instance=ExtResource( 5 )]
margin_top = 153.0
margin_bottom = 200.0
slot_name = "Hands"

[node name="Accessoiry1ContainerEmpty" parent="Equipments/Rows/LeftMargin/Left" instance=ExtResource( 5 )]
margin_top = 204.0
margin_bottom = 251.0
slot_name = "Accessory 1"

[node name="PlayerPortrait" type="TextureRect" parent="Equipments/Rows"]
margin_left = 234.0
margin_right = 414.0
margin_bottom = 251.0
rect_min_size = Vector2( 150, 200 )
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource( 1 )
expand = true
stretch_mode = 4

[node name="RightMargin" type="MarginContainer" parent="Equipments/Rows"]
margin_left = 418.0
margin_right = 648.0
margin_bottom = 251.0
custom_constants/margin_right = 10

[node name="Right" type="VBoxContainer" parent="Equipments/Rows/RightMargin"]
margin_right = 220.0
margin_bottom = 251.0
size_flags_horizontal = 3
custom_constants/separation = 4

[node name="BodyContainerEmpty" parent="Equipments/Rows/RightMargin/Right" instance=ExtResource( 5 )]
slot_name = "Body"
corner_rounding = 1

[node name="LegsContainerEmpty" parent="Equipments/Rows/RightMargin/Right" instance=ExtResource( 5 )]
margin_top = 51.0
margin_bottom = 98.0
slot_name = "Legs"
corner_rounding = 1

[node name="ShoesContainerEmpty" parent="Equipments/Rows/RightMargin/Right" instance=ExtResource( 5 )]
margin_top = 102.0
margin_bottom = 149.0
slot_name = "Shoes"
corner_rounding = 1

[node name="ShieldContainerEmpty" parent="Equipments/Rows/RightMargin/Right" instance=ExtResource( 5 )]
margin_top = 153.0
margin_bottom = 200.0
slot_name = "Shield"
corner_rounding = 1

[node name="Accessoiry2ContainerEmpty" parent="Equipments/Rows/RightMargin/Right" instance=ExtResource( 5 )]
margin_top = 204.0
margin_bottom = 251.0
slot_name = "Accessoiry 2"
corner_rounding = 1

[node name="CenterContainer" type="CenterContainer" parent="Equipments"]
margin_top = 300.0
margin_right = 648.0
margin_bottom = 353.0
mouse_filter = 1

[node name="MarginWeapons" type="MarginContainer" parent="Equipments/CenterContainer"]
margin_left = 84.0
margin_right = 564.0
margin_bottom = 53.0
custom_constants/margin_top = 6

[node name="Weapons" type="HBoxContainer" parent="Equipments/CenterContainer/MarginWeapons"]
margin_top = 6.0
margin_right = 480.0
margin_bottom = 53.0
custom_constants/separation = 40

[node name="WeaponContainerEmpty" parent="Equipments/CenterContainer/MarginWeapons/Weapons" instance=ExtResource( 5 )]
slot_name = "Weapon"

[node name="AmmoContainerEmpty" parent="Equipments/CenterContainer/MarginWeapons/Weapons" instance=ExtResource( 5 )]
margin_left = 260.0
margin_right = 480.0
slot_name = "Ammunition"
corner_rounding = 1

[node name="PlayerPortraitView" type="Viewport" parent="."]
size = Vector2( 250, 250 )
own_world = true
transparent_bg = true
handle_input_locally = false
msaa = 2
render_target_v_flip = true
gui_disable_input = true

[node name="Mannequiny" parent="PlayerPortraitView" instance=ExtResource( 1 )]

[node name="Camera" type="Camera" parent="PlayerPortraitView"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.06837, 2.18033 )
environment = SubResource( 2 )
far = 20.0

[node name="SpotLight" type="SpotLight" parent="PlayerPortraitView"]
transform = Transform( 1, 0, 0, 0, 0.804179, 0.594388, 0, -0.594388, 0.804179, 0, 2.43668, 1.82133 )
[connection signal="close_clicked" from="Equipments/Title" to="." method="_on_Title_close_clicked"]
[connection signal="drag_ended" from="Equipments/Title" to="." method="_on_Title_drag_ended"]
[connection signal="drag_started" from="Equipments/Title" to="." method="_on_Title_drag_started"]
[connection signal="item_equipped" from="Equipments/Rows/LeftMargin/Left/HeadContainerEmpty" to="." method="_on_HeadContainerEmpty_item_equipped"]
